feat: book 1 - introduction to diffusers

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,8 @@
                 "VisualStudioExptTeam.vscodeintellicode",
                 "redhat.vscode-yaml",
                 "yzhang.markdown-all-in-one",
-                "ms-azuretools.vscode-docker"
+                "ms-azuretools.vscode-docker",
+                "github.copilot"
             ]
         }
     }
